Playable minesweeper. Improvements needed:  - better & consistent styling  - improved file/folder structure  - leaderboard for minesweepR ✔  - scoreboards for tic-tac-toe & rock-paper-scissors ✔  - better pictures for the cards on the homescreen  - new game button that takes the player to the homescreen of the game ✔  - bugfix so that when clicking on covered cells it will only reveal one cell, unless there is no adjacent bombs. If there is no adjacent bombs, it should reveal more cells until they encounter bombs.

--- a/src/Clock/AnalogClock.css
+++ b/src/Clock/AnalogClock.css
@@ -95,3 +95,14 @@
         height: 135px;
     }
 }
+
+@media screen and (max-width: 1000px) {
+    .pic img{
+        width: 300px;
+    }
+}
+@media screen and (max-width: 1200px) {
+    .pic img{
+        width: 400px;
+    }
+}
