--- a/src/Home/style/style.css
+++ b/src/Home/style/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #4b5563;
+    /*background-color: #4b5563;*/
+    background-color: #9ca3af;
 }
 .home-background {
     background-color: #9ca3af;
